2006-01-30  Brian Cameron  <brian.cameron@sun.com>

	* Release 2.13.0.7: 
	* NEWS, configure.ac: Updated
	* docs/C/gdm.xml: Updated version/date.
	* config/gdmprefetchlist.in:  Change libgstreamer-0.8 to 
	  libgstreamer-0.10 in the prefetch list.

2006-01-30  Brian Cameron  <brian.cameron@sun.com>

	* config/PreSession.in:  Fix so it no longer tries to access
	  the config file via grep/sed.  Now it calls
	  'gdmflexiserver --command="GET_CONFIG"', which is a much 
	  cleaner way to get the info in needs to set the background	
	  color.

2006-01-30  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/themes/happygnome/options.png,
	  gui/greeter/themes/happygnome-list/options.png:
	  Adding back the previous sessions.png as
	  options.png since it is the best icon for the
	  new menu.

2006-01-30  Brian Cameron  <brian.cameron@sun.com>

	* gui/greeter/themes/happygnome/disconnect.png, 
	  gui/greeter/themes/happygnome/options.png,
	  gui/greeter/themes/happygnome/sessions.png,
	  gui/greeter/themes/happygnome/system.png,
	  gui/greeter/themes/happygnome/happygnome.xml,
	  gui/greeter/themes/happygnome-list/disconnect.png, 
	  gui/greeter/themes/happygnome-list/options.png,
	  gui/greeter/themes/happygnome-list/sessions.png,
	  gui/greeter/themes/happygnome-list/system.png,
	  gui/greeter/themes/happygnome-list/happygnome.xml,
	  gui/greeter/themes/circles/Makefile.am,
	  gui/greeter/themes/circles/circles.xml,
	  gui/greeter/greeter_canvas_item.c, 
	  gui/greeter/greeter_parser.c, gui/gdmlogin.c,
	  docs/C/gdm.xml:  Added new "options_button" which pops up
	  the F10 menu.  Modified themes to now use the new options
	  button for a cleaner one-button look.  Patch provied by
	  Sebastien Bacher <seb128@debian.org>.  Modifications to
	  existing themes made by myself.  Also modified string
	  "Remote login via XDMCP" to "Remote Login via XDMCP".

2006-01-27  Brian Cameron  <brian.cameron@sun.com>

	* configure.in: Make sure /usr/openwin/bin is in the PATH on 