@@ -1,0 +1,9 @@
+figs = \
+	figures/gdm_window.png
+figdir = figures
+docname = gdm
+lang = es
+omffile = gdm-es.omf
+entities = legal.xml
+include $(top_srcdir)/xmldocs.make
+dist-hook: app-dist-hook
