@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 <!ENTITY legal SYSTEM "legal.xml">
-<!ENTITY version "2.13.0.6">
+<!ENTITY version "2.13.0.7">
 <!ENTITY date "01/15/2006">
 ]>
 <article id="index" lang="es">
@@ -64,14 +64,14 @@
 
 
 
-    <releaseinfo>Este manual describe la versión  2.13.0.6 del Gestor de entrada de Gnome. Se actualizó por última vez en 15/01/2006.</releaseinfo>  
+    <releaseinfo>This manual describes version 2.13.0.7 of the GNOME Display Manager. It was last updated on 01/15/2006.</releaseinfo>  
  
   </articleinfo>
 
   <sect1 id="preface">
     <title>Términos y convenciones usados en este manual</title>
 
-    <para>Este manual describe la versión  2.13.0.6 del Gestor de entrada de Gnome. Se actualizó por última vez en 15/01/2006.</para>  
+    <para>This manual describes version 2.13.0.7 of the GNOME Display Manager. It was last updated on 01/15/2006.</para>  
 
     <para>Selector - Un programa que se usa para seleccionar un equipo remoto para gestionar una pantalla remotamente en la pantalla local (<command>gdmchooser</command>).</para>
 
