@@ -5,6 +5,7 @@
 	* docs/C/gdm.xml: Updated version/date.
 	* config/gdmprefetchlist.in:  Change libgstreamer-0.8 to 
 	  libgstreamer-0.10 in the prefetch list.
+	* docs/es/Makefile.am:  Adding file.
 
 2006-01-30  Brian Cameron  <brian.cameron@sun.com>
 
